# Agent4Wikidata

./: .dockerignore  DOCKER_WORKFLOW.md  Dockerfile  README.md  pyproject.toml
ask_wikidata/: .env  __init__.py  cli.py  llm_backend.py  main.py  prompt.py  sparql_query_graph.py  wikidata_call.py  wikidata_lookup_tools.py
docs/: OLLAMA_DOCKER_FIRST.md  ROBUSTNESS_HARDENING.md
results/: breaking_results_20260501T031031.json
tests/: breaking.py  run_breaking_pipeline.py
tests/results/: breaking_results_20260501T074023.json  breaking_results_20260501T075737.json
